# fastapi-logging-benchmark

./: .gitignore  LICENSE  README.md  benchmark.py  locustfile.py  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_app.py  test_benchmark.py
